Name:           bed-and-breakfast
Version:        0.4.2
Synopsis:       Efficient Matrix operations in 100% Haskell.
Description:    Efficient Matrix operations in 100% Haskell.
                .
                [@v0.1@] Initial version, features @det@,
                    basic arithmetic operations, and instances for
                    'Float', 'Double', 'Complex', and 'Rational'.
                .
                [@v0.1.1@] Fixed wrong algorithm for computing the
                    inverse of a 'Matrix'.
                .
                [@v0.1.2@] Added instances for @Num Matrix@,
                    @Fractional Matrix@, and @Eq Matrix@.
                .
                [@v0.1.3@] @inv@ is now a total function and will
                    no longer call `error' if a matrix is not
                    invertible. Also @Matrix@ derives 'Data.Typeable'
                    now.
                .
                [@v0.1.4@] Added @scale@, and methods for joining
                    matrices vertically and horizontally. Corrected
                    a bug in @isUnit@ reported by Charles Durham.
                    @isUnit@ returned True for any matrix for which
                    @all (== 1) . trace@ would have, which is wrong).
                .
                [@v0.2@] A little bit more documentation. Also moved some
                    functions (@isXXX@) away from the type class @MatrixElement@.
                    Properly flagged the package as experimental (was
                    improperly marked as @stable@, copied form a
                    template).
                .
                [@v0.2.1@] Added @cofactors@, @adjugate@, @minor@, and
                    @minorMatrix@.
                .
                [@v0.2.2@] @rank@ works now for any Matrix component type.
                .
                [@v0.2.3@] Added 'Read' instance for @Matrix@.
                    Improved on documentation.
                .
                [@v0.3@] Added a QuickCheck test suite, fixed a bug in @det@
                    (det would crash for singular matrices, where it should
                    return 0).
                .
                [@v0.3.1@] Added TemplateHaskell syntactic sugar (see
                    "Numeric.Matrix.Sugar"). Rewrote multiplication.
                    @matrix@ function build an array faster now.
                .
                [@v0.3.2@] Numeric.Matrix.Sugar was not mentioned in the
                    cabal file. Improved test suite. Improved documentation.
                .
                [@v0.4@] Fixed a bug regarding @empty@ and @fromList@.
                    Use unsafe operations where it is safe for speed.
                    Added RULES. Added an instance for binary.
                .
                [@v0.4.1@] The unsafe operations used in v0.4 turned out
                    to fatally fail on certain platforms. Revoked this
                    change.
                .
                [@v0.4.2@] Fixed a tiny bug regarding the @row@ function
                    for extracting the number of rows in a Matrix.
                    Thanks to Tim Makarios for finding and fixing the bug.


License:        MIT
License-File:   LICENSE
Author:         Julian Fleischer <julian.fleischer@fu-berlin.de>
Maintainer:     Julian Fleischer <julian.fleischer@fu-berlin.de>
Build-Type:     Simple
Cabal-Version:  >= 1.8
Category:       Numeric, Math, Linear Algebra
Stability:      experimental
Homepage:       https://hackage.haskell.org/package/bed-and-breakfast

Source-Repository head
    type: git
    location: https://github.com/scravy/bed-and-breakfast.git

Library
    Exposed-Modules:    Numeric.Matrix,
                        Numeric.Matrix.Sugar
    Build-Depends:      base >= 4.5 && < 5,
                        deepseq >= 1.3,
                        array >= 0.4,
                        binary >= 0.5,
                        template-haskell >= 2.7
    Hs-Source-Dirs:     src

Test-Suite quickcheck
    type:           exitcode-stdio-1.0
    main-is:        quickcheck-tests.hs
    GHC-Options:    -O2
    build-depends:  base >= 4.5 && < 5,
                    bed-and-breakfast == 0.3.2,
                    QuickCheck >= 2.4.2


