Name:           bed-and-breakfast
Version:        0.5
Synopsis:       Efficient Matrix and Vector operations in 100% Haskell.
Description:    Efficient Matrix and Vector operations in 100% Haskell.
                .
                This library uses boxed and unboxed arrays
                in the ST monad, in order to achieve efficiency.
License:        MIT
License-File:   LICENSE
Author:         Julian Fleischer <julian.fleischer@fu-berlin.de>
Maintainer:     Julian Fleischer <julian.fleischer@fu-berlin.de>
Build-Type:     Simple
Cabal-Version:  >= 1.8
Category:       Numeric, Math, Linear Algebra
Stability:      experimental
Homepage:       https://hackage.haskell.org/package/bed-and-breakfast

Extra-Source-Files: CHANGES.md, README.md, ROADMAP.md

Source-Repository head
    type: git
    location: https://github.com/scravy/bed-and-breakfast.git

Library
    Exposed-Modules:    Numeric.Matrix,
                        Numeric.Matrix.Sugar,
                        Numeric.Vector
    Build-Depends:      base >= 4.5 && < 5,
                        deepseq >= 1.3,
                        array >= 0.4,
                        binary >= 0.5,
                        template-haskell >= 2.7,
                        cpphs >= 1.18
    Hs-Source-Dirs:     src
    GHC-Options:        -Wall -pgmPcpphs -optP--cpp
    Extensions:         CPP

Test-Suite quickcheck
    type:           exitcode-stdio-1.0
    main-is:        quickcheck-tests.hs
    GHC-Options:    -O2
    build-depends:  base >= 4.5 && < 5,
                    bed-and-breakfast,
                    QuickCheck >= 2.4.2


